@@ -10,6 +10,7 @@ import com.itextpdf.kernel.pdf.PdfWriter;
 import com.itextpdf.layout.Document;
 import com.itextpdf.layout.element.Image;
 import com.itextpdf.layout.properties.HorizontalAlignment;
+import freemarker.template.Configuration;
 import freemarker.template.Template;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -18,19 +19,22 @@ import org.esup_portail.esup_stage.enums.FolderEnum;
 import org.esup_portail.esup_stage.enums.TypeSignatureEnum;
 import org.esup_portail.esup_stage.exception.AppException;
 import org.esup_portail.esup_stage.model.*;
+import org.esup_portail.esup_stage.service.FilenameSanitizerService;
 import org.esup_portail.esup_stage.repository.CentreGestionJpaRepository;
+import org.esup_portail.esup_stage.repository.QuestionEvaluationJpaRepository;
+import org.esup_portail.esup_stage.repository.QuestionSupplementaireJpaRepository;
 import org.esup_portail.esup_stage.repository.TemplateConventionJpaRepository;
+import org.esup_portail.esup_stage.service.ConventionService;
 import org.esup_portail.esup_stage.service.impression.context.ImpressionContext;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.stereotype.Service;
 import org.springframework.http.HttpStatus;
+import org.springframework.stereotype.Service;
 import org.springframework.web.servlet.view.freemarker.FreeMarkerConfigurer;
 
 import java.io.*;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Service
 public class ImpressionService {
@@ -51,6 +55,18 @@ public class ImpressionService {
     @Autowired
     PreviewConventionFactory previewConventionFactory;
 
+    @Autowired
+    QuestionSupplementaireJpaRepository questionSupplementaireJpaRepository;
+
+    @Autowired
+    QuestionEvaluationJpaRepository questionEvaluationJpaRepository;
+
+    @Autowired
+    ConventionService conventionService;
+
+    @Autowired
+    FilenameSanitizerService filenameSanitizerService;
+
     public void generateConventionAvenantPDF(Convention convention, Avenant avenant, ByteArrayOutputStream ou, boolean isRecap) {
         if (convention.getNomenclature() == null) {
             convention.setValeurNomenclature();
@@ -59,9 +75,10 @@ public class ImpressionService {
         if (templateConvention == null) {
             throw new AppException(HttpStatus.NOT_FOUND, "Template convention " + convention.getTypeConvention().getLibelle() + "-" + convention.getLangueConvention().getCode() + " non trouvé");
         }
-
         CentreGestion centreEtablissement = centreGestionJpaRepository.getCentreEtablissement();
-        ImpressionContext impressionContext = new ImpressionContext(convention, avenant, centreEtablissement);
+        List<QuestionSupplementaire> questionSupplementaire = getQuestionsSupplementaires(centreEtablissement);
+        List<QuestionEvaluation> questionEvaluations = questionEvaluationJpaRepository.findAll();
+        ImpressionContext impressionContext = new ImpressionContext(convention, avenant, centreEtablissement, questionSupplementaire, questionEvaluations);
 
         try {
 
@@ -69,7 +86,9 @@ public class ImpressionService {
 
             htmlTexte = manageIfElse(htmlTexte);
 
-            Template template = new Template("template_convention_texte" + templateConvention.getId(), htmlTexte, freeMarkerConfigurer.getConfiguration());
+            Configuration freeMarkerConfig = freeMarkerConfigurer.getConfiguration();
+            freeMarkerConfig.setClassicCompatible(true);
+            Template template = new Template("template_convention_texte" + templateConvention.getId(), htmlTexte, freeMarkerConfig);
             StringWriter texte = new StringWriter();
             template.process(impressionContext, texte);
 
@@ -99,7 +118,7 @@ public class ImpressionService {
                 }
             }
 
-            this.generatePDF(texte.toString(), filename, imageData, ou);
+            this.generatePDF(texte.toString(), filename, imageData, ou,false);
         } catch (Exception e) {
             logger.error("Une erreur est survenue lors de la génération du PDF", e);
             throw new AppException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur technique");
@@ -109,16 +128,17 @@ public class ImpressionService {
     public void generateFichePDF(String htmlTexte, ByteArrayOutputStream ou) {
         try {
             String filename = "FicheEtudiant.pdf";
-            this.generatePDF(htmlTexte, filename, null, ou);
+            this.generatePDF(htmlTexte, filename, null, ou,false);
         } catch (Exception e) {
             logger.error("Une erreur est survenue lors de la génération du PDF", e);
             throw new AppException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur technique");
         }
     }
 
-    public void generatePDF(String texte, String filename, ImageData imageData, ByteArrayOutputStream ou) {
+    public void generatePDF(String texte, String filename, ImageData imageData, ByteArrayOutputStream ou, boolean isEvaluation) {
         String tempFilePath = this.getClass().getResource("/templates").getPath();
-        String tempFile = tempFilePath + "temp_" + filename;
+        String safeFilename = filenameSanitizerService.sanitize(filename);
+        String tempFile = tempFilePath + "temp_" + safeFilename;
         FileOutputStream fop = null;
         Date dateGeneration = new Date();
         try {
@@ -130,23 +150,26 @@ public class ImpressionService {
             Document document = new Document(pdfDoc);
 
             if (imageData != null) {
-                Image img = prepareLogoImage(imageData);
+                Image img = prepareLogoImage(imageData, isEvaluation);
                 document.add(img);
             }
             document.close();
         } catch (Exception e) {
-            e.printStackTrace();
+            logger.error("Une erreur est survenue lors de la generation du PDF {}", filename, e);
+            throw new AppException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur technique");
         } finally {
             try {
                 if (fop != null) {
                     File file = new File(tempFile);
                     fop.close();
-                    file.delete();
+                    boolean deleted = file.delete();
+                    if (!deleted) {
+                        logger.warn("Le fichier temporaire {} n'a pas pu être supprimé.",tempFile);
+                    }
                 }
             } catch (IOException e) {
-                e.printStackTrace();
+                logger.warn("Impossible de fermer ou supprimer le fichier temporaire du PDF {}", tempFile, e);
             }
-
         }
     }
 
@@ -173,56 +196,69 @@ public class ImpressionService {
 
     public String generateXmlData(Convention convention, TypeSignatureEnum typeSignatureEnum) {
         List<Map<String, String>> otp = new ArrayList<>();
-        List<CentreGestionSignataire> signatairesOtp = convention.getCentreGestion().getSignataires().stream().filter(s -> s.getType() == typeSignatureEnum).collect(Collectors.toList());
-        if (signatairesOtp.size() == 0) {
+        List<CentreGestionSignataire> signatairesOtp = convention.getCentreGestion().getSignataires().stream().filter(s -> s.getType() == typeSignatureEnum).toList();
+        if (signatairesOtp.isEmpty()) {
             return null;
         }
+        String firstnameKey = "firstname";
+        String lastnameKey = "lastname";
+        String phoneNumberKey = "phoneNumber";
+        String emailKey = "email";
         for (CentreGestionSignataire signataire : signatairesOtp) {
             switch (signataire.getId().getSignataire()) {
                 case etudiant:
                     // Ajout de l'étudiant
                     otp.add(new HashMap<>() {{
-                        put("firstname", convention.getEtudiant().getPrenom());
-                        put("lastname", convention.getEtudiant().getNom());
-                        put("phoneNumber", getOtpDataPhoneNumber(convention.getTelPortableEtudiant()));
-                        put("email", getOtpDataEmail(convention.getEtudiant().getMail()));
+                        put(firstnameKey, convention.getEtudiant().getPrenom());
+                        put(lastnameKey, convention.getEtudiant().getNom());
+                        put(phoneNumberKey, getOtpDataPhoneNumber(convention.getTelPortableEtudiant()));
+                        put(emailKey, getOtpDataEmail(convention.getEtudiant().getMail()));
                     }});
                     break;
                 case enseignant:
                     // Ajout de l'enseignant référent
                     otp.add(new HashMap<>() {{
-                        put("firstname", convention.getEnseignant().getPrenom());
-                        put("lastname", convention.getEnseignant().getNom());
-                        put("phoneNumber", getOtpDataPhoneNumber(convention.getEnseignant().getTel()));
-                        put("email", getOtpDataEmail(convention.getEnseignant().getMail()));
+                        put(firstnameKey, convention.getEnseignant().getPrenom());
+                        put(lastnameKey, convention.getEnseignant().getNom());
+                        put(phoneNumberKey, getOtpDataPhoneNumber(convention.getEnseignant().getTel()));
+                        put(emailKey, getOtpDataEmail(convention.getEnseignant().getMail()));
                     }});
                     break;
                 case tuteur:
                     // Ajout du tuteur pédagogique
                     otp.add(new HashMap<>() {{
-                        put("firstname", convention.getContact().getPrenom());
-                        put("lastname", convention.getContact().getNom());
-                        put("phoneNumber", getOtpDataPhoneNumber(convention.getContact().getTel()));
-                        put("email", getOtpDataEmail(convention.getContact().getMail()));
+                        put(firstnameKey, convention.getContact().getPrenom());
+                        put(lastnameKey, convention.getContact().getNom());
+                        put(phoneNumberKey, getOtpDataPhoneNumber(convention.getContact().getTel()));
+                        put(emailKey, getOtpDataEmail(convention.getContact().getMail()));
                     }});
                     break;
                 case signataire:
                     // Ajout du signataire de la convention
                     otp.add(new HashMap<>() {{
-                        put("firstname", convention.getSignataire().getPrenom());
-                        put("lastname", convention.getSignataire().getNom());
-                        put("phoneNumber", getOtpDataPhoneNumber(convention.getSignataire().getTel()));
-                        put("email", getOtpDataEmail(convention.getSignataire().getMail()));
+                        put(firstnameKey, convention.getSignataire().getPrenom());
+                        put(lastnameKey, convention.getSignataire().getNom());
+                        put(phoneNumberKey, getOtpDataPhoneNumber(convention.getSignataire().getTel()));
+                        put(emailKey, getOtpDataEmail(convention.getSignataire().getMail()));
                     }});
                     break;
                 case viseur:
                     // Ajout du directeur du département
-                    otp.add(new HashMap<>() {{
-                        put("firstname", convention.getCentreGestion().getPrenomViseur());
-                        put("lastname", convention.getCentreGestion().getNomViseur());
-                        put("phoneNumber", getOtpDataPhoneNumber(convention.getCentreGestion().getTelephone()));
-                        put("email", getOtpDataEmail(convention.getCentreGestion().getMail()));
-                    }});
+                    if(convention.getCentreGestion().getPrenomDelegataireViseur() != null && !convention.getCentreGestion().getPrenomDelegataireViseur().isEmpty()) {
+                        otp.add(new HashMap<>() {{
+                            put(firstnameKey, convention.getCentreGestion().getPrenomDelegataireViseur());
+                            put(lastnameKey, convention.getCentreGestion().getNomDelegataireViseur());
+                            put(phoneNumberKey, getOtpDataPhoneNumber(convention.getCentreGestion().getTelephone()));
+                            put(emailKey, getOtpDataEmail(convention.getCentreGestion().getMail()));
+                        }});
+                    }else{
+                        otp.add(new HashMap<>() {{
+                            put(firstnameKey, convention.getCentreGestion().getPrenomViseur());
+                            put(lastnameKey, convention.getCentreGestion().getNomViseur());
+                            put(phoneNumberKey, getOtpDataPhoneNumber(convention.getCentreGestion().getTelephone()));
+                            put(emailKey, getOtpDataEmail(convention.getCentreGestion().getMail()));
+                        }});
+                    }
                     break;
                 default:
                     break;
@@ -235,16 +271,16 @@ public class ImpressionService {
         sb.append("<meta-data-list>");
         if (typeSignatureEnum == TypeSignatureEnum.otp) {
             for (int i = 0; i < otp.size(); ++i) {
-                sb.append("<meta-data name=\"OTP_firstname_").append(i).append("\" value=\"").append(otp.get(i).get("firstname")).append("\"/>");
-                sb.append("<meta-data name=\"OTP_lastname_").append(i).append("\" value=\"").append(otp.get(i).get("lastname")).append("\"/>");
-                sb.append("<meta-data name=\"OTP_phonenumber_").append(i).append("\" value=\"").append(otp.get(i).get("phoneNumber")).append("\"/>");
-                sb.append("<meta-data name=\"OTP_email_").append(i).append("\" value=\"").append(otp.get(i).get("email")).append("\"/>");
+                sb.append("<meta-data name=\"OTP_firstname_").append(i).append("\" value=\"").append(xmlValue(otp.get(i).get(firstnameKey))).append("\"/>");
+                sb.append("<meta-data name=\"OTP_lastname_").append(i).append("\" value=\"").append(xmlValue(otp.get(i).get(lastnameKey))).append("\"/>");
+                sb.append("<meta-data name=\"OTP_phonenumber_").append(i).append("\" value=\"").append(xmlValue(otp.get(i).get(phoneNumberKey))).append("\"/>");
+                sb.append("<meta-data name=\"OTP_email_").append(i).append("\" value=\"").append(xmlValue(otp.get(i).get(emailKey))).append("\"/>");
             }
         } else {
             int counter = 1;
-            for (String key : Arrays.asList("lastname", "firstname", "email")) {
+            for (String key : Arrays.asList(lastnameKey, firstnameKey, emailKey)) {
                 for (Map<String, String> stringStringMap : otp) {
-                    sb.append("<meta-data name=\"TEXT").append(String.format("%03d", counter++)).append("\" value=\"").append(stringStringMap.get(key)).append("\"/>");
+                    sb.append("<meta-data name=\"TEXT").append(String.format("%03d", counter++)).append("\" value=\"").append(xmlValue(stringStringMap.get(key))).append("\"/>");
                 }
             }
         }
@@ -259,7 +295,7 @@ public class ImpressionService {
         }
 
         String htmlTexte = getDefaultText("/templates/template_style.html");
-        htmlTexte = htmlTexte.replaceAll("__project_fonts_dir__", this.getClass().getResource("/static/fonts/").getPath());
+        htmlTexte = htmlTexte.replace("__project_fonts_dir__", Objects.requireNonNull(this.getClass().getResource("/static/fonts/")).getPath());
 
         if (isRecap) {
             htmlTexte += getDefaultText("/templates/template_recapitulatif.html");
@@ -273,6 +309,14 @@ public class ImpressionService {
             // Remplacement ${avenant.motifs} par le template html contenant tous les motifs
             String motifTexte = getDefaultText("/templates/template_avenant_motifs.html");
             texte = texte.replace("${avenant.motifs}", motifTexte);
+
+            // Remplacement ${avenant.contact} par le bon signataire (nom & prénom) si il a ete change
+            String avenantContact = getDefaultText("/templates/template_avenant_contact.html");
+            texte = texte.replace("${avenant.contact}", avenantContact);
+
+            // Remplacement ${avenant.enseignant} par le bon signataire (nom & prénom) si il a ete change
+            String avenantEnseignant = getDefaultText("/templates/template_avenant_enseignant.html");
+            texte = texte.replace("${avenant.enseignant}", avenantEnseignant);
 
             // Style par défaut des tables dans les templates
             htmlTexte += texte;
@@ -297,7 +341,8 @@ public class ImpressionService {
         if (deliveryAddress != null && !deliveryAddress.isEmpty()  && !deliveryAddress.equals("null")) {
             return "";
         }
-        return phoneNumber;
+        String parsedPhoneNumber = conventionService.parseNumTel(phoneNumber);
+        return parsedPhoneNumber != null ? parsedPhoneNumber : "";
     }
 
     public String getOtpDataEmail(String email) {
@@ -305,16 +350,20 @@ public class ImpressionService {
         if (deliveryAddress != null && !deliveryAddress.isEmpty() && !deliveryAddress.equals("null")) {
             return deliveryAddress;
         }
-        return email != null ? email : "";
+        return xmlValue(email);
+    }
+
+    private String xmlValue(String value) {
+        return value != null && !value.equals("null") ? value : "";
     }
 
     public String manageIfElse(String text) {
-        return text.replaceAll("\\$IF", "<#if")
-                .replaceAll("\\$EQUALS ", "==\\\"")
-                .replaceAll(" \\$FI", ">")
-                .replaceAll("\\$ELSE", "<#else>")
-                .replaceAll("\\?\\?\\$", "\\?\\?>")
-                .replaceAll("\\$ENDIF", "</#if>");
+        return text.replace("$IF", "<#if")
+                .replace("$EQUALS ", "==\"")
+                .replace(" $FI", ">")
+                .replace("$ELSE", "<#else>")
+                .replace("??$", "??>")
+                .replace("$ENDIF", "</#if>");
 
     }
 
@@ -324,7 +373,7 @@ public class ImpressionService {
      * @param imageData les données de l'image
      * @return l'image prête à être ajoutée au document
      */
-    private Image prepareLogoImage(ImageData imageData) {
+    private Image prepareLogoImage(ImageData imageData, boolean isEvaluation) {
         Image img = new Image(imageData);
 
         float maxWidth = 155f;
@@ -339,7 +388,12 @@ public class ImpressionService {
 
         img.scale(scale, scale);
 
-        img.setHorizontalAlignment(HorizontalAlignment.LEFT);
+        if (isEvaluation) {
+            img.setHorizontalAlignment(HorizontalAlignment.CENTER);
+        } else {
+            img.setHorizontalAlignment(HorizontalAlignment.LEFT);
+        }
+
 
         img.setMarginBottom(10f);
         return img;
@@ -370,7 +424,9 @@ public class ImpressionService {
                 ImpressionContext impressionContext = previewConventionFactory.createPreviewContext(centreGestion, centreEtablissement);
 
                 // Traitement du template avec les données fictives
-                Template template = new Template("template_preview_" + templateId, htmlTexte, freeMarkerConfigurer.getConfiguration());
+                Configuration freeMarkerConfig = freeMarkerConfigurer.getConfiguration();
+                freeMarkerConfig.setClassicCompatible(true);
+                Template template = new Template("template_preview_" + templateId, htmlTexte, freeMarkerConfig);
                 StringWriter texte = new StringWriter();
                 template.process(impressionContext, texte);
                 htmlTexte = texte.toString();
@@ -456,7 +512,8 @@ public class ImpressionService {
      */
     private void generatePreviewPDFFirstPage(String texte, String filename, ImageData imageData, ByteArrayOutputStream ou) {
         String tempFilePath = this.getClass().getResource("/templates").getPath();
-        String tempFile = tempFilePath + "temp_" + filename;
+        String safeFilename = filenameSanitizerService.sanitize(filename);
+        String tempFile = tempFilePath + "temp_" + safeFilename;
         FileOutputStream fop = null;
         Date dateGeneration = new Date();
 
@@ -476,7 +533,7 @@ public class ImpressionService {
             Document document = new Document(pdfDest);
 
             if (imageData != null) {
-                Image img = prepareLogoImage(imageData);
+                Image img = prepareLogoImage(imageData, false);
                 document.add(img);
             }
 
@@ -493,11 +550,123 @@ public class ImpressionService {
                 }
                 File tempFileObj = new File(tempFile);
                 if (tempFileObj.exists()) {
-                    tempFileObj.delete();
+                    boolean deleted = tempFileObj.delete();
+                    if (!deleted) {
+                        logger.warn("Le fichier temporaire {} n'a pas pu être supprimé.", tempFile);
+                    }
                 }
             } catch (IOException e) {
                 logger.error("Erreur lors de la suppression des fichiers temporaires", e);
             }
         }
+    }
+
+    /**
+     * Génère le pdf de l'évaluation du tuteur de stage
+     * @param convention
+     * @param avenant
+     * @param outputStream
+     */
+    public void generateEvaluationPDF(Convention convention, Avenant avenant, ByteArrayOutputStream outputStream, Integer typeRole) {
+        if (convention.getNomenclature() == null) {
+            convention.setValeurNomenclature();
+        }
+        String templatePath = getTemplatePath(convention, typeRole);
+
+        CentreGestion centreEtablissement = centreGestionJpaRepository.getCentreEtablissement();
+        List<QuestionSupplementaire> questionSupplementaire = getQuestionsSupplementaires(centreEtablissement);
+        List<QuestionEvaluation> questionEvaluations = questionEvaluationJpaRepository.findAll();
+        ImpressionContext impressionContext = new ImpressionContext(convention, avenant, centreEtablissement, questionSupplementaire, questionEvaluations);
+
+        try {
+            // Récupération du texte HTML directement depuis les fichiers
+            String htmlTexte = getDefaultText(templatePath);
+            htmlTexte = this.getHtmlText(htmlTexte);
+
+            // Traitement des conditions if/else comme dans generateConventionAvenantPDF
+            htmlTexte = manageIfElse(htmlTexte);
+
+            // Configuration FreeMarker
+            Configuration freeMarkerConfig = freeMarkerConfigurer.getConfiguration();
+            freeMarkerConfig.setClassicCompatible(true);
+            String name = "";
+
+            Template template = new Template("template_"+name, htmlTexte, freeMarkerConfig);
+
+            // Remplir le template avec les données
+            StringWriter texte = new StringWriter();
+            template.process(impressionContext, texte);
+
+            String filename = name + "_" + convention.getEtudiant().getPrenom() + "_" + convention.getEtudiant().getNom() + ".pdf";
+
+            // Récupération du logo du centre gestion (même logique que generateConventionAvenantPDF)
+            String logoname;
+            Fichier fichier = convention.getCentreGestion().getFichier();
+            ImageData imageData = null;
+
+            if (fichier != null) {
+                logoname = this.getLogoFilePath(this.getNomFichier(fichier.getId(), fichier.getNom()));
+                if (Files.exists(Paths.get(logoname))) {
+                    imageData = ImageDataFactory.create(logoname);
+                }
+            }
+
+            // Si le centre de gestion n'a pas de logo ou qu'il n'existe pas physiquement, on prend celui du centre établissement
+            if (imageData == null) {
+                fichier = centreEtablissement.getFichier();
+                if (fichier != null) {
+                    logoname = this.getLogoFilePath(this.getNomFichier(fichier.getId(), fichier.getNom()));
+                    if (Files.exists(Paths.get(logoname))) {
+                        imageData = ImageDataFactory.create(logoname);
+                    }
+                }
+            }
+
+            // Génération du PDF
+            this.generatePDF(texte.toString(), filename, imageData, outputStream,true);
+
+        } catch (Exception e) {
+            logger.error("Une erreur est survenue lors de la génération du PDF d'évaluation du tuteur", e);
+            throw new AppException(HttpStatus.INTERNAL_SERVER_ERROR, "Erreur technique");
+        }
+    }
+
+    private List<QuestionSupplementaire> getQuestionsSupplementaires(CentreGestion centreGestion) {
+        if (centreGestion == null || centreGestion.getFicheEvaluation() == null) {
+            logger.warn(
+                    "Aucune fiche d'évaluation configurée pour le centre de gestion {}, génération PDF poursuivie sans fiche d'évaluation.",
+                    centreGestion != null ? centreGestion.getId() : null
+            );
+            return Collections.emptyList();
+        }
+        return questionSupplementaireJpaRepository.findByFicheEvaluation(centreGestion.getFicheEvaluation().getId());
+    }
+
+    private static String getTemplatePath(Convention convention, Integer typeRole) {
+        String name = switch (typeRole) {
+            case 0 -> "evaluation_etu";
+            case 1 -> "evaluation_ens";
+            case 2 -> "evaluation_tuteur";
+            default -> throw new AppException(HttpStatus.INTERNAL_SERVER_ERROR, "Template non trouvée");
+        };
+        // Récupération du template d'évaluation depuis les fichiers
+        String templatePath = "/templates/template_"+name;
+        if (convention.getLangueConvention() != null && !convention.getLangueConvention().getCode().equals("fr")) {
+            templatePath += "_" + convention.getLangueConvention().getCode();
+        }
+        templatePath += ".html";
+        return templatePath;
+    }
+
+    private String getHtmlText(String texte) {
+        String htmlTexte = getDefaultText("/templates/template_style.html");
+        htmlTexte = htmlTexte.replace("__project_fonts_dir__", Objects.requireNonNull(this.getClass().getResource("/static/fonts/")).getPath());
+
+        htmlTexte += texte;
+
+        htmlTexte = htmlTexte.replace("<figure", "<div");
+        htmlTexte = htmlTexte.replace("</figure>", "</div>");
+
+        return htmlTexte;
     }
 }
